PCHR-1556: Fix add group icon alignment

--- a/scss/civicrm/contact/pages/_manage-groups.scss
+++ b/scss/civicrm/contact/pages/_manage-groups.scss
@@ -12,6 +12,11 @@
     a.newGroup.button {
       @extend %btn-civi-primary;
       margin-bottom: 20px;
+
+      .crm-i {
+        position: relative;
+        bottom: 1px;
+      }
     }
   }
 
